<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/TituloTXT"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/WebServicesTXT"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/tiendaa"/>

        <TextView
            android:text="@string/OpcionesTxt"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--OPCIONES DEL APLICATIVO-->

        <!--BOTÓN PARA REALIZAR LA CONSULTA-->
        <Button
            android:id="@+id/BtnRealizarConsulta"
            android:text="@string/BtnRealizarConsulta"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--BOTÓN PARA VER INFORMACIÓN DEL APLICATIVO-->
        <Button
            android:id="@+id/BtnAcercaDe"
            android:text="@string/BtnAcercaDe"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--BOTÓN PARA VER NOMBRES DE INTEGRANTES-->
        <Button
            android:id="@+id/BtnIntegrantes"
            android:text="@string/BtnIntegrantes"
            android:background="@drawable/boton_personalizado"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>